# imgannotator

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  secrets.properties
.github/workflows/: ci.yml
src/docs/: index.md
src/imgannotator/: cli.py  filters.py  metadata.py
src/tests/: test_filters.py  test_metadata.py
